Updated Fov estimator to manually be able to add focal length

--- a/notebook/demo_video_colab.ipynb
+++ b/notebook/demo_video_colab.ipynb
@@ -64,7 +64,11 @@
     "output_path = \"/content/drive/MyDrive/Colab Notebooks/PoseEstimation/SAM-Body3d/output_video.mp4\"\n",
     "\n",
     "# Optional: Path to model_config.yaml if it's not automatically found near the checkpoint\n",
-    "# model_config_path = \"/content/drive/MyDrive/Colab Notebooks/PoseEstimation/SAM-Body3d/model_config.yaml\""
+    "# model_config_path = \"/content/drive/MyDrive/Colab Notebooks/PoseEstimation/SAM-Body3d/model_config.yaml\"\n",
+    "\n",
+    "# Optional: Manually specify focal length if known (e.g., if metadata is stripped)\n",
+    "# If set to None, it will try to use FOV estimator or default values\n",
+    "focal_length = None # e.g., 1000.0"
    ]
   },
   {
@@ -109,7 +113,7 @@
    "outputs": [],
    "source": [
     "# 5. Process Video\n",
-    "def process_video_colab(estimator, video_path, output_path):\n",
+    "def process_video_colab(estimator, video_path, output_path, focal_length=None):\n",
     "    if not os.path.exists(video_path):\n",
     "        print(f\"Error: Video file not found at {video_path}\")\n",
     "        return\n",
@@ -133,11 +137,22 @@
     "    print(f\"Processing video: {video_path}\")\n",
     "    print(f\"Output will be saved to: {output_path}\")\n",
     "    \n",
+    "    # Construct camera intrinsics if focal length is provided\n",
+    "    cam_int = None\n",
+    "    if focal_length is not None:\n",
+    "        print(f\"Using provided focal length: {focal_length}\")\n",
+    "        cam_int = torch.tensor([\n",
+    "            [focal_length, 0, width / 2],\n",
+    "            [0, focal_length, height / 2],\n",
+    "            [0, 0, 1]\n",
+    "        ]).float()\n",
+    "\n",
     "    # Use the optimized generator (process_video) which avoids clearing cache every frame\n",
     "    generator = estimator.process_video(\n",
     "        video_path,\n",
     "        bbox_thr=0.5,\n",
     "        use_mask=False,\n",
+    "        cam_int=cam_int,\n",
     "        verbose=False \n",
     "    )\n",
     "    \n",
@@ -146,12 +161,12 @@
     "        rend_img = visualize_sample_together(frame, outputs, estimator.faces)\n",
     "        writer.write(rend_img.astype(np.uint8))\n",
     "        \n",
-    "    cap.release()\n",
+    "    cap.release()\\\n",
     "    writer.release()\n",
     "    print(\"Done.\")\n",
     "\n",
     "# Run the processing\n",
-    "process_video_colab(estimator, video_path, output_path)"
+    "process_video_colab(estimator, video_path, output_path, focal_length=focal_length)"
    ]
   },
   {
